[gd_scene format=3 uid="uid://bxv2h0isvjwm5"]

[ext_resource type="Script" uid="uid://bt568sten6aq4" path="res://builder/BuilderSwitch.gd" id="1_vkwue"]
[ext_resource type="Script" uid="uid://c0jnsahm0guxo" path="res://builder/BeltBuilder.gd" id="2_mhjh0"]
[ext_resource type="Script" uid="uid://b2qxj22lbsql8" path="res://builder/BuildingBuilder.gd" id="3_3r3yl"]
[ext_resource type="PackedScene" uid="uid://eqqa2oheicj4" path="res://builder/RectSelect.tscn" id="5_1xi5u"]
[ext_resource type="PackedScene" uid="uid://bnx5c4loj2dkn" path="res://builder/Deleter.tscn" id="6_kklv8"]

[node name="BuilderSwitch" type="Node3D" unique_id=1482098403]
script = ExtResource("1_vkwue")

[node name="BeltBuilder" type="Node3D" parent="." unique_id=770052703]
script = ExtResource("2_mhjh0")

[node name="BuildingBuilder" type="Node3D" parent="." unique_id=886064116]
script = ExtResource("3_3r3yl")

[node name="Deleter" parent="." unique_id=243172542 instance=ExtResource("6_kklv8")]

[node name="RectSelect" parent="." unique_id=1830457415 instance=ExtResource("5_1xi5u")]
